--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
-APP_ENV=development
-DB_HOST=localhost
-DB_NAME=japroperty
-DB_USERNAME=root
-DB_PASSWORD=
-DB_CHARSET=utf8
-MAX_LOG_FILE_SIZE=10485760
-LOG_DIRECTORY=logs
+APP_ENV=fsdafs
+DB_HOST=fdsaf
+DB_NAME=fadsf
+DB_USERNAME=fdas
+DB_PASSWORD=fasdf
+LOG_DIRECTORY=asfd
+MAX_LOG_FILE_SIZE=23
